# openhome

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  PLAN.md  PRD.md  README.md  flake.nix  justfile  package.json  plans.md
api/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  compose.yml  docker-entrypoint.sh
api/.sqlx/: query-020646a5d92c49a7c05a10c319083147d1815142fd091d3f2b9146fa558ee9d2.json  query-2f6acda6155cd61c2430c84f44fe1ef5cf9da12a728ace13b5337eb8f819d9fd.json  query-31c1c12a9e67d962526723d09011e71a183b06be179b750242a34fadaa3dbf6c.json  query-3a5c711f12d95cc4b1b292db381ee01ea799e2b9e10f12b1cd2c17a062878d2a.json  query-793077c2b9f2c40e4cad36973a366389c1a2133efedbb3f97f4678f4bae78ebb.json  query-8864d9c449bf8e75f1b92bbd03b4e8afa4cbd809becad0689b69e5eb91c8ab67.json  query-b0ae69b5491d096234512805926320904058d0a8bcea4c15290662688b66d8df.json  query-d92bcb26afe7ca89865174f0b5b729004cc211353c23bd376bc6b6719dec78af.json  query-e6af7591c658b756348b45b4546d706112d1321f3868e19694132bcc901deeb6.json  query-f81f3c46122bc276b27824bec39222a3e6c9bd6b6c5c107c02dc0068f0078826.json  query-fd4161f5bf1953472accb7d791fbd7cde64135e325e05ff93c35da26dfe814d8.json  query-fd716bc2b87af7b1135f388fb70c3539f86d1a41fc4a73ac8c71d923daafa146.json
api/migrations/: 0002_feeds_metadata_and_read_at.down.sql  0002_feeds_metadata_and_read_at.up.sql  001_create_feeds.down.sql  001_create_feeds.up.sql
api/scripts/: seed_feeds.sh  test_docker_api.sh
api/src/: auth.rs  error.rs  lib.rs  main.rs
api/src/models/: docker.rs
api/src/routes/: adguard.rs  docker.rs  facts.rs  feeds.rs  health.rs  ir.rs  mod.rs  timeline.rs
api/src/services/: adguard.rs  docker.rs  feed.rs  ir.rs  mod.rs
api/tests/: adguard.rs  docker.rs  facts.rs  feed_refresh.rs  feeds.rs  health_check.rs  ir.rs  timeline.rs
api/tests/common/: mod.rs
assets/: presentation.html
mobile/: .env.example  AGENTS.md  index.html  package.json  start  tsconfig.json  vite.config.ts
mobile-native/: AGENTS.md  build.gradle.kts  settings.gradle.kts
mobile-native/app/: build.gradle.kts
mobile-native/app/src/main/: AndroidManifest.xml
mobile-native/app/src/main/java/com/example/openhome/: MainActivity.kt  Navigation.kt  NavigationKeys.kt  OpenHomeAppContainer.kt
mobile-native/app/src/main/res/values/: strings.xml  themes.xml
mobile-native/gradle/: libs.versions.toml
mobile/src/: App.tsx  api.ts  app.tsx  style.css  test-setup.ts
mobile/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  config.dev.toml  config.prod.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json  mobile.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs
mobile/src/api/: adguard.ts  client.ts  docker.test.ts  docker.ts  facts.ts  health.ts  index.ts  rss.ts
mobile/src/components/: adguard-control.tsx  docker-health.tsx  fact-card.tsx  rss-feed.tsx  rss-preview.tsx
mobile/src/components/ui/: api-status-indicator.tsx  api-status.tsx  badge.tsx  bottom-nav.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  skeleton.tsx  swipeable-pages.tsx
mobile/src/pages/: api-key-setup.tsx  api-key-unlock.tsx  docker.tsx  rss.tsx  settings.tsx
mobile/src/stores/: auth.ts  config.ts
mobile/src/utils/: formatters.test.ts  formatters.ts
(+16 files in other folders)
