[package]
name = "openhome-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22"
bollard = { version = "0.20.0", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.4.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
feed-rs = "0.3"
futures-util = "0.3"
url = "2.5"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8.8", features = ["macros"] }
hyper = "1.8.1"
pretty_assertions = "1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
wiremock = "0.6"

[profile.release]
opt-level = "s"      # Optimize for size with good performance balance
lto = true           # Link-Time Optimization for smaller binary
codegen-units = 1    # Better optimization at cost of compile time
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip debug symbols
