[package]
name = "home-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["patrickhaahr"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "home_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.6"
toml = "0.9.11"
tauri-plugin-store = "2.4.2"

[profile.release]
codegen-units = 1          # Better optimization at cost of compile time
lto = true                 # Link-time optimization
opt-level = "s"            # Optimize for size; use "3" for speed
panic = "abort"            # Smaller binary, but no unwinding
strip = true               # Remove debug symbols

